# lichess-move-db

./: .gitignore  Cargo.toml  README.md  config.example.yaml  schema.sql
docs/: PERFORMANCE-PLAN.md
src/: cli.rs  config.rs  download.rs  ingest.rs  main.rs  manifest.rs  pgn.rs  server.rs  store.rs  store_postgres.rs
