[package]
name = "lichess-fen-service"
version = "0.1.0"
edition = "2021"
description = "Local FEN → move frequency store from Lichess database"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-util", "net", "rt-multi-thread", "sync"] }
futures = { version = "0.3", features = ["std"] }
reqwest = { version = "0.12", features = ["stream"] }
zstd = "0.13"
pgn-reader = "0.29"
shakmaty = { version = "0.30", features = ["variant"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

[profile.release]
lto = true
codegen-units = 1
